Added HTML files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <ul>
             <li><a href="main.html">main</a></li>
             <li><a href="GUI.html">GUI</a></li>
+            <li><a href="undo_redo.html">undo_redo</a></li>
+            <li><a href="image_handler.html">image_handler</a></li>
+            <li><a href="Tools.html">Tools</a></li>
     </ul>
 </div>
     </nav>
