added verification test summaries to index HTML

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav class="pdoc">
         <label id="navtoggle" for="togglestate" class="pdoc-button"><svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke-linecap='round' stroke="currentColor" stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg></label>
         <input id="togglestate" type="checkbox" aria-hidden="true" tabindex="-1">
+        
         <div>    <h2>Available Modules</h2>
     <ul>
             <li><a href="GUI.html">GUI</a></li>
@@ -25,6 +26,27 @@
             <li><a href="undo_redo.html">undo_redo</a></li>
             <li><a href="image_handler.html">image_handler</a></li>
     </ul>
+
+
+    <div>    <h2>Verification Test Code Coverage Summaries</h2>
+        <ul>
+            <li><a href="verification_html/all_tests.html">All Tests Summary</a></li>
+            <li> <a></a> </li>
+            <li><a href="verification_html/all_manual_tests.html">All Manual Tests Summary</a></li>
+                <li><a href="verification_html/pencil_test.html">pencil_test</a></li>
+                <li><a href="verification_html/brush_test.html">brush_test</a></li>
+                <li><a href="verification_html/eraser_test.html">eraser_test</a></li>
+                <li><a href="verification_html/eyedropper_test.html">eyedropper_test</a></li>
+                <li><a href="verification_html/fill_test.html">fill_test</a></li>
+                <li><a href="verification_html/opening_app.html">opening_app</a></li>
+                <li><a href="verification_html/redo_test.html">redo_test</a></li>
+                <li><a href="verification_html/save_load_test.html">save_load_test</a></li>
+                <li><a href="verification_html/undo_test.html">undo_test</a></li>
+            <li> <a></a> </li>
+            <li><a href="verification_html/unit_tests.html">unit_tests</a></li>
+
+        </ul>
+
 </div>
     </nav>
     <header class="pdoc">
